[workspace]

members = [
    "common",
    "node",
    "hub",
    "cli",
    "proxy",
    "install/src/x86_64-pc-windows-gnu/node/samizdat-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Pedro B Arruda <pedrobittencourt3@gmail.com>"]
edition = "2024"

[profile.release]

opt-level = "s"
lto = "fat"
