[package]
name = "samizdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1.8"
failure_derive = "0.1.8"
futures = "0.3.24"
log = "0.4.17"
log4rs = "1.1.1"
mime_guess = "2.0.4"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.144"
serde_derive = "1.0.144"
structopt = "0.3.26"
table = "0.4.0"
tabled = "0.8.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
samizdat-common = { path = "../common" }
chrono = "0.4.22"
serde_json = "1.0.85"
toml = "0.5.9"
humantime-serde = "1.1.1"
askama = "0.11.1"
humantime = "2.1.0"
notify = "5.0.0"
regex = "1.6.0"
lazy_static = "1.4.0"
anyhow = "1.0.63"
num_cpus = "1.13.1"
