[package]
name = "samizdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
futures = "0.3.25"
log = "0.4.17"
log4rs = "1.2.0"
mime_guess = "2.0.4"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
serde = "1.0.152"
serde_derive = "1.0.152"
structopt = "0.3.26"
table = "0.4.0"
tabled = "0.17.0"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
samizdat-common = { path = "../common" }
chrono = "0.4.23"
serde_json = "1.0.91"
toml = "0.8.19"
humantime-serde = "1.1.1"
askama = "0.12.1"
humantime = "2.1.0"
notify = "7.0.0"
regex = "1.7.0"
lazy_static = "1.4.0"
anyhow = "1.0.68"
num_cpus = "1.15.0"
webbrowser = "1.0.2"
tungstenite = "0.24.0"
ethers = "2.0.10"
rpassword = "7.3.1"
