[package]
name = "samizdat"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
futures = "0.3.32"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "stream",
] }
serde = "1.0.228"
serde_derive = "1.0.228"
structopt = "0.3.26"
table = "0.4.0"
tabled = "0.17.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
samizdat-common = { path = "../common" }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
toml = "0.8.19"
askama = "0.12.1"
humantime = "2.3.0"
notify = "7.0.0"
regex = "1.12.3"
anyhow = "1.0.102"
webbrowser = "1.2.1"
tungstenite = "0.24.0"
ethers = "2.0.14"
rpassword = "7.5.2"
humantime-serde = "1.1.1"
tracing = "0.1.44"
