[package]
name = "samizdat-common"
version = "0.1.0"
authors = ["Pedro B Arruda <parruda@artmend.com.br>"]
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "io-util",
] }
futures = "0.3.25"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
base64-url = "3.0.0"
serde_derive = "1.0.152"
serde = { version = "1.0.152", features = ["rc"] }
bincode = "1.3.3"
sha3 = "0.10.6"
getrandom = "0.2.8"
quinn = { version = "0.11.6", default-features = false, features = [
    "log",
    "platform-verifier",
    "runtime-tokio",
    "rustls-ring",
] }
rustls = { version = "0.23.18", default-features = false, features = ["ring"] }
rcgen = "0.13.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
aes-gcm-siv = "0.11.1"
serde_json = "1.0.91"
rustls-pki-types = "1.10.0"
thiserror = "2.0.3"
tracing = "0.1.41"
jammdb = "0.11.0"
