[package]
name = "samizdat-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["lmdb-rkv"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "io-util",
] }
futures = "0.3.32"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
base64-url = "3.0.3"
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["rc"] }
bincode = "1.3.3"
sha3 = "0.10.8"
getrandom = "0.2.15"
quinn = { version = "0.11.6", default-features = false, features = [
    "log",
    "runtime-tokio",
    "rustls-ring",
] }
rustls = { version = "0.23.18", default-features = false, features = ["ring"] }
rcgen = "0.13.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
ed25519-dalek = { version = "2.2.0", features = ["serde", "zeroize"] }
aes-gcm-siv = "0.11.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
serde_json = "1.0.149"
rustls-pki-types = "1.10.0"
thiserror = "2.0.3"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
strum = "0.26.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lmdb-rkv = "0.14.0"
tempfile = { version = "3.12", optional = true }

[dev-dependencies]
tempfile = "3.12"

[features]
test-helpers = ["dep:tempfile"]
