[package]
name = "samizdat-hub"
version = "0.1.0"
authors = ["Pedro B Arruda <parruda@artmend.com.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
structopt = "0.3.26"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "net", "time"] }
rocksdb = { version = "0.22.0", default-features = false, features = ["snappy"] }
futures = "0.3.25"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
lazy_static = "1.4.0"
base64-url = "3.0.0"
serde_derive = "1.0.152"
serde = { version = "1.0.152", features = ["rc"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
samizdat-common = { path = "../common"}
chashmap = "2.2.2"
quinn = "0.11.6" # do NOT upgrade until quinn bugfix!
bincode = "1.3.3"
chrono = "0.4.23"
rand = "0.8.5"
rand_distr = "0.4.3"
strum = "0.26.3"
strum_macros = "0.26.4"
http = "1.1.0"
serde_json = "1.0.91"
axum = { version = "0.7.9", features = ["macros", "tokio"] }
