[package]
name = "samizdat-hub"
version = "0.1.0"
authors = ["Pedro B Arruda <parruda@artmend.com.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "snappy",
] }
futures = "0.3.25"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
lazy_static = "1.4.0"
serde_derive = "1.0.152"
serde = { version = "1.0.152", features = ["rc"] }
samizdat-common = { path = "../common" }
quinn = "0.11.6"
bincode = "1.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
strum = "0.26.3"
strum_macros = "0.26.4"
http = "1.1.0"
serde_json = "1.0.91"
axum = { version = "0.7.9", features = ["macros", "tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
