[package]
name = "samizdat-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
futures = "0.3.32"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["rc"] }
samizdat-common = { path = "../common" }
bincode = "1.3.3"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
strum_macros = "0.26.4"
http = "1.4.0"
serde_json = "1.0.149"
axum = { version = "0.8.9", features = ["macros", "tokio"] }
tracing = "0.1.44"
toml = "0.8.19"
serde-inline-default = "0.2.3"
tower-http = { version = "0.6.10", features = ["trace"] }
tower = "0.5.3"
strum = "0.26.3"
serde_with = "3.20.0"

[dev-dependencies]
samizdat-common = { path = "../common", features = ["test-helpers"] }
tempfile = "3.12"
