[tool.poetry]
name = "install"
version = "0.1.0"
description = ""
authors = ["Pedro Arruda <parruda@findhotel.net>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
