[package]
name = "samizdat-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]


[dependencies]
base64-url = "3.0.0"
futures = "0.3.25"
http = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.152"
structopt = "0.3.26"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "sync",
] }
samizdat-common = { path = "../common" }
bincode = "1.3.3"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0.91"
brotli = "7.0.0"
rand = "0.8.5"
url = "2.3.1"
askama = { version = "0.12.1", features = ["serde-json"] }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_with = "3.11.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
ethers = "2.0.10"
ordered-float = "4.5.0"
axum = { version = "0.7.9", features = ["macros", "tokio", "json"] }
axum-extra = { version = "0.9.6", features = ["query"] }
tower = "0.5.1"
humantime-serde = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jammdb = "0.11.0"
