[package]
name = "samizdat-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]


[dependencies]
base64-url = "3.0.3"
futures = "0.3.32"
http = "1.4.0"
serde = "1.0.228"
serde_derive = "1.0.228"
structopt = "0.3.26"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport", "tcp"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "sync",
] }
samizdat-common = { path = "../common" }
bincode = "1.3.3"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
brotli = "8.0.2"
rand = "0.8.5"
url = "2.5.4"
askama = { version = "0.12.1", features = ["serde-json"] }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_with = "3.20.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ethers = "2.0.14"
ordered-float = "4.6.0"
axum = { version = "0.8.9", features = ["macros", "tokio", "json"] }
axum-extra = { version = "0.10.3", features = ["query"] }
tower = "0.5.3"
humantime-serde = "1.1.1"
tracing = "0.1.44"
toml = "0.8.19"
serde-inline-default = "0.2.3"
tower-http = { version = "0.6.10", features = ["trace"] }
aes-gcm-siv = "0.11.1"
subtle = "2.6.1"

[dev-dependencies]
samizdat-common = { path = "../common", features = ["test-helpers"] }
tempfile = "3.12"
