[package]
name = "samizdat-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "3.0.0"
bytes = "1.3.0"
futures = "0.3.25"
http = "1.1.0"
serde = "1.0.152"
serde_derive = "1.0.152"
structopt = "0.3.26"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "net", "time"] }
bincode = "1.3.3"
serde_json = "1.0.91"
askama = "0.12.1"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "stream"] }
hyper = "1.5.1"
mime = "0.3.16"
scraper = "0.21.0"
include_dir = "0.7.3"
static_dir = "0.2.0"
rand = "0.8.5"
axum = { version = "0.7.9", features = ["macros", "original-uri"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
anyhow = "1.0.93"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
