[package]
name = "samizdat-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["serde"]

[dependencies]
samizdat-common = { path = "../common" }
bytes = "1.3.0"
http = "1.1.0"
structopt = "0.3.26"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
askama = "0.12.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "stream",
] }
hyper = "1.5"
mime = "0.3.16"
scraper = "0.22.0"
rand = "0.8.5"
axum = { version = "0.7.9", features = ["macros", "original-uri"] }
axum-server = { version = "0.7.1", default-features = false, features = [
    "tls-rustls-no-provider",
] }
anyhow = "1.0.93"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
toml = "0.8.19"
serde_derive = "1.0.215"
serde = "1.0.215"
rustls-acme = { version = "0.12.1", default-features = false, features = [
    "ring",
    "tokio",
    "axum",
] }
tokio-stream = "0.1.17"
serde-inline-default = "0.2.3"
