[package]
name = "samizdat-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["serde"]

[dependencies]
samizdat-common = { path = "../common" }
bytes = "1.11.1"
structopt = "0.3.26"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
askama = "0.12.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "stream",
] }
hyper = "1.9"
mime = "0.3.17"
scraper = "0.22.0"
rand = "0.8.5"
axum = { version = "0.8.9", features = ["macros", "original-uri"] }
axum-server = { version = "0.7.3", default-features = false, features = [
    "tls-rustls-no-provider",
] }
anyhow = "1.0.102"
tracing = "0.1.44"
toml = "0.8.19"
serde_derive = "1.0.228"
serde = "1.0.228"
rustls-acme = { version = "0.12.1", default-features = false, features = [
    "ring",
    "tokio",
    "axum",
] }
tokio-stream = "0.1.18"
serde-inline-default = "0.2.3"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["trace"] }
