[package]
name = "test-quic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
bincode = "1.3.3"
quinn = "0.11.6"
samizdat-common = { path = "../common"}
serde = "1.0.215"
serde_derive = "1.0.215"
futures = "0.3.31"
